# DZ__WEB

./: README.md  READMY.md
DZ4_WEB/: Dockerfile  README.md  error.html  main.py  message.html  pyproject.toml
DZ5_WEB/: README.md  log.txt  main.py  pyproject.toml  server.py  websocker_server.py  websockerts_chat_client.py  websockets_chat_client.py  websockets_chat_server.py
DZ5_WEB/storage/: data.json
